# 2020-USTC-Compiler-Lab-MLIR

./: .gitignore  Conclusion.md  LICENSE  README.en.md  README.md  mlir-toy.md  必做部分.pptx  必做部分_v2.pptx
log/: 202012.md
mlir-toy/: CMakeLists.txt  README.md  toy-cuda-runner  toy-cuda-runner.cpp  toy_cuda_runner.cpp  toyc.cpp  选做部分-v2.pptx  选做部分.pptx
mlir-toy/docs/: intro_to_the_codes.md  mlir-cuda-usage.md  mlir-toy2020.md
mlir-toy/include/toy/: AST.h  AnalysisPass.h  CMakeLists.txt  Lexer.h  Ops.td  Parser.h  Passes.h
mlir-toy/mlir/: Dialect.cpp  LowerToAffineLoops.cpp  LowerToGPU.cpp  LowerToLLVM.cpp  MLIRGen.cpp
mlir-toy/tests/: add.toy  conv.toy  conv_3types.toy  divide.toy  lu.toy  lu_and_det.toy  matrixmul.toy  print.toy  reshape.toy  reverse.toy  simple.toy  subtract.toy  transpose.toy
my-llvm-driver/: CMakeLists.txt  README-cn.md  README.en.md  README.md  main.cpp
my-llvm-driver/diagram/: for.c
my-llvm-driver/docs/: ClangStaticAnalyzer.md  CodingSpecChecker.md  DataFlow.md  LLVM-11.0.0-install.md  LoopSearch.md  report copy.md  report.md
my-llvm-driver/docs/slide/: 必做部分.pptx
my-llvm-driver/include/Analysis/: LoopStatisticsPass.hpp
my-llvm-driver/include/Checker/: SimpleDivZeroChecker.h  myAnalysisAction.h
my-llvm-driver/include/Driver/: driver.h
my-llvm-driver/include/optimization/: LoopSearchPass.hpp  LoopStatisticsPass.hpp  MyPasses.hpp
my-llvm-driver/script/: diagram
my-llvm-driver/src/Checker/: SimpleDivZeroChecker.cpp  myAnalysisAction.cpp
my-llvm-driver/src/Driver/: driver.cpp
my-llvm-driver/tests/: checkertest.cpp  constant_prop.cpp  dce.c  for.cpp  functions.c  helloworld.c  helloworld.cpp  if_else.c  loop.cpp  loop1.cpp  loop2.cpp  loop3.cpp  loop4.cpp  loop5.cpp  loop6.cpp  mem2reg_test.c  simple.cpp  simple_loop.cpp
